--- a/getModelFromAddress.ipynb
+++ b/getModelFromAddress.ipynb
@@ -1109,6 +1109,53 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "could not broadcast input array from shape (3072,4096,3) into shape (9314,8363,3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[98], line 24\u001b[0m\n\u001b[0;32m     22\u001b[0m     \u001b[38;5;28;01melif\u001b[39;00m i \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m4\u001b[39m:\n\u001b[0;32m     23\u001b[0m         face_image \u001b[38;5;241m=\u001b[39m window_cut[\u001b[38;5;241m0\u001b[39m]\n\u001b[1;32m---> 24\u001b[0m     \u001b[43mtexture\u001b[49m\u001b[43m[\u001b[49m\u001b[43muv_coordinates\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m:\u001b[49m\u001b[43muv_coordinates\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43muv_coordinates\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m:\u001b[49m\u001b[43muv_coordinates\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m]\u001b[49m \u001b[38;5;241m=\u001b[39m face_image\n\u001b[0;32m     26\u001b[0m cv2\u001b[38;5;241m.\u001b[39mimwrite(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mImages\u001b[39m\u001b[38;5;130;01m\\\\\u001b[39;00m\u001b[38;5;124mtexture.jpg\u001b[39m\u001b[38;5;124m\"\u001b[39m, texture)\n\u001b[0;32m     27\u001b[0m cv2\u001b[38;5;241m.\u001b[39mimshow(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTexture\u001b[39m\u001b[38;5;124m\"\u001b[39m, texture)\n",
+      "\u001b[1;31mValueError\u001b[0m: could not broadcast input array from shape (3072,4096,3) into shape (9314,8363,3)"
+     ]
+    }
+   ],
+   "source": [
+    "north_face_image = cv2.imread(\"Images\\\\north_face.jpg\")\n",
+    "south_face_image = cv2.imread(\"Images\\\\south_face.jpg\")\n",
+    "west_face_image = cv2.imread(\"Images\\\\west_face.jpg\")\n",
+    "east_face_image = cv2.imread(\"Images\\\\east_face.jpg\")\n",
+    "\n",
+    "texture_width = int(total_width*1000)\n",
+    "texture_height = int(total_height*1000)\n",
+    "\n",
+    "texture = np.zeros((texture_height, texture_width, 3), dtype=np.uint8)\n",
+    "\n",
+    "for i in range(len(uvmap)):\n",
+    "    uv_coordinates = (uvmap[i] * np.array([texture_width, texture_height])).astype(np.int32)\n",
+    "    face_image = None\n",
+    "    if i == 0:\n",
+    "        face_image = north_face_image\n",
+    "    elif i == 1:\n",
+    "        face_image = south_face_image\n",
+    "    elif i == 2:\n",
+    "        face_image = west_face_image\n",
+    "    elif i == 3:\n",
+    "        face_image = east_face_image\n",
+    "    elif i == 4:\n",
+    "        face_image = window_cut[0]\n",
+    "    texture[uv_coordinates[0][1]:uv_coordinates[2][1], uv_coordinates[0][0]:uv_coordinates[1][0]] = face_image\n",
+    "\n",
+    "cv2.imwrite(\"Images\\\\texture.jpg\", texture)\n",
+    "cv2.imshow(\"Texture\", texture)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [
