--- a/getModelFromAddress.ipynb
+++ b/getModelFromAddress.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
        "            &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width,\n",
        "                initial-scale=1.0, maximum-scale=1.0, user-scalable=no&quot; /&gt;\n",
        "            &lt;style&gt;\n",
-       "                #map_faadce7969fbfa5c3f5f9cf2674f5204 {\n",
+       "                #map_51e1b3e57865df68204b3ffeb1478ef2 {\n",
        "                    position: relative;\n",
        "                    width: 100.0%;\n",
        "                    height: 100.0%;\n",
@@ -100,14 +100,14 @@
        "&lt;body&gt;\n",
        "    \n",
        "    \n",
-       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_faadce7969fbfa5c3f5f9cf2674f5204&quot; &gt;&lt;/div&gt;\n",
+       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_51e1b3e57865df68204b3ffeb1478ef2&quot; &gt;&lt;/div&gt;\n",
        "        \n",
        "&lt;/body&gt;\n",
        "&lt;script&gt;\n",
        "    \n",
        "    \n",
-       "            var map_faadce7969fbfa5c3f5f9cf2674f5204 = L.map(\n",
-       "                &quot;map_faadce7969fbfa5c3f5f9cf2674f5204&quot;,\n",
+       "            var map_51e1b3e57865df68204b3ffeb1478ef2 = L.map(\n",
+       "                &quot;map_51e1b3e57865df68204b3ffeb1478ef2&quot;,\n",
        "                {\n",
        "                    center: [47.63404846191406, 8.694016456604004],\n",
        "                    crs: L.CRS.EPSG3857,\n",
@@ -121,73 +121,73 @@
        "\n",
        "        \n",
        "    \n",
-       "            var tile_layer_0aeb161c07f6cc710c3f0dae63d3ceb7 = L.tileLayer(\n",
+       "            var tile_layer_e761879a2bbdf9769a7920cb96c0ebc7 = L.tileLayer(\n",
        "                &quot;https://tile.openstreetmap.org/{z}/{x}/{y}.png&quot;,\n",
        "                {&quot;attribution&quot;: &quot;\\u0026copy; \\u003ca href=\\&quot;https://www.openstreetmap.org/copyright\\&quot;\\u003eOpenStreetMap\\u003c/a\\u003e contributors&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 19, &quot;maxZoom&quot;: 19, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
        "            );\n",
        "        \n",
        "    \n",
-       "            tile_layer_0aeb161c07f6cc710c3f0dae63d3ceb7.addTo(map_faadce7969fbfa5c3f5f9cf2674f5204);\n",
+       "            tile_layer_e761879a2bbdf9769a7920cb96c0ebc7.addTo(map_51e1b3e57865df68204b3ffeb1478ef2);\n",
        "        \n",
        "    \n",
-       "            var marker_8a8e52ed637c9679a862370de0361d08 = L.marker(\n",
+       "            var marker_bd8e9d4b2161c4b71c413e757dcebbc5 = L.marker(\n",
        "                [47.63404846191406, 8.694016456604004],\n",
        "                {}\n",
-       "            ).addTo(map_faadce7969fbfa5c3f5f9cf2674f5204);\n",
+       "            ).addTo(map_51e1b3e57865df68204b3ffeb1478ef2);\n",
        "        \n",
        "    \n",
-       "        var popup_fe81308fb7e8677d43b6fecfc8f2d44b = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
+       "        var popup_af3be830fdb34bf0724a650f02e20594 = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
        "\n",
        "        \n",
        "            \n",
-       "                var html_b5702ab3cb0272f04543664f82ce3bfa = $(`&lt;div id=&quot;html_b5702ab3cb0272f04543664f82ce3bfa&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Index: 0&lt;/div&gt;`)[0];\n",
-       "                popup_fe81308fb7e8677d43b6fecfc8f2d44b.setContent(html_b5702ab3cb0272f04543664f82ce3bfa);\n",
+       "                var html_354f0f234507502c5a66155e8b7cfb90 = $(`&lt;div id=&quot;html_354f0f234507502c5a66155e8b7cfb90&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Index: 0&lt;/div&gt;`)[0];\n",
+       "                popup_af3be830fdb34bf0724a650f02e20594.setContent(html_354f0f234507502c5a66155e8b7cfb90);\n",
        "            \n",
        "        \n",
        "\n",
-       "        marker_8a8e52ed637c9679a862370de0361d08.bindPopup(popup_fe81308fb7e8677d43b6fecfc8f2d44b)\n",
+       "        marker_bd8e9d4b2161c4b71c413e757dcebbc5.bindPopup(popup_af3be830fdb34bf0724a650f02e20594)\n",
        "        ;\n",
        "\n",
        "        \n",
        "    \n",
        "    \n",
-       "            var marker_2fa7329866daa863dac8056197d4c44f = L.marker(\n",
+       "            var marker_24b485c83ba03e1c1d7f589589231723 = L.marker(\n",
        "                [47.634090423583984, 8.694190979003906],\n",
        "                {}\n",
-       "            ).addTo(map_faadce7969fbfa5c3f5f9cf2674f5204);\n",
+       "            ).addTo(map_51e1b3e57865df68204b3ffeb1478ef2);\n",
        "        \n",
        "    \n",
-       "        var popup_630542a2d925770d4b7562d52a60fcb8 = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
+       "        var popup_87abb5d3d7c09eb4c5c51756aef6248d = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
        "\n",
        "        \n",
        "            \n",
-       "                var html_1c27dd120258cda10f26fcbb2606bf64 = $(`&lt;div id=&quot;html_1c27dd120258cda10f26fcbb2606bf64&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Index: 1&lt;/div&gt;`)[0];\n",
-       "                popup_630542a2d925770d4b7562d52a60fcb8.setContent(html_1c27dd120258cda10f26fcbb2606bf64);\n",
+       "                var html_4a851f8922ceb8a98d17af04e56a1d60 = $(`&lt;div id=&quot;html_4a851f8922ceb8a98d17af04e56a1d60&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Index: 1&lt;/div&gt;`)[0];\n",
+       "                popup_87abb5d3d7c09eb4c5c51756aef6248d.setContent(html_4a851f8922ceb8a98d17af04e56a1d60);\n",
        "            \n",
        "        \n",
        "\n",
-       "        marker_2fa7329866daa863dac8056197d4c44f.bindPopup(popup_630542a2d925770d4b7562d52a60fcb8)\n",
+       "        marker_24b485c83ba03e1c1d7f589589231723.bindPopup(popup_87abb5d3d7c09eb4c5c51756aef6248d)\n",
        "        ;\n",
        "\n",
        "        \n",
        "    \n",
        "    \n",
-       "            var marker_10cc7e0f0ac2fd8fa041f99e4a1e2447 = L.marker(\n",
+       "            var marker_a2ac9c96a4304cc985fc9e12ae26fb74 = L.marker(\n",
        "                [47.63389205932617, 8.694341659545898],\n",
        "                {}\n",
-       "            ).addTo(map_faadce7969fbfa5c3f5f9cf2674f5204);\n",
+       "            ).addTo(map_51e1b3e57865df68204b3ffeb1478ef2);\n",
        "        \n",
        "    \n",
-       "        var popup_8297acb208cfd7c60f2ac1ce8e0ca55a = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
+       "        var popup_568f21cf3843b9bff7d4758479632cb0 = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
        "\n",
        "        \n",
        "            \n",
-       "                var html_ef6201943e3e3aff81c964cb882eb5c2 = $(`&lt;div id=&quot;html_ef6201943e3e3aff81c964cb882eb5c2&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Index: 2&lt;/div&gt;`)[0];\n",
-       "                popup_8297acb208cfd7c60f2ac1ce8e0ca55a.setContent(html_ef6201943e3e3aff81c964cb882eb5c2);\n",
+       "                var html_e6615898167549ed6ebc074e2a9d6b1e = $(`&lt;div id=&quot;html_e6615898167549ed6ebc074e2a9d6b1e&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Index: 2&lt;/div&gt;`)[0];\n",
+       "                popup_568f21cf3843b9bff7d4758479632cb0.setContent(html_e6615898167549ed6ebc074e2a9d6b1e);\n",
        "            \n",
        "        \n",
        "\n",
-       "        marker_10cc7e0f0ac2fd8fa041f99e4a1e2447.bindPopup(popup_8297acb208cfd7c60f2ac1ce8e0ca55a)\n",
+       "        marker_a2ac9c96a4304cc985fc9e12ae26fb74.bindPopup(popup_568f21cf3843b9bff7d4758479632cb0)\n",
        "        ;\n",
        "\n",
        "        \n",
@@ -196,10 +196,10 @@
        "&lt;/html&gt;\" style=\"position:absolute;width:100%;height:100%;left:0;top:0;border:none !important;\" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe></div></div>"
       ],
       "text/plain": [
-       "<folium.folium.Map at 0x205a201f3d0>"
+       "<folium.folium.Map at 0x2caadf0bd90>"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,13 +436,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ba2acfafa8bc4e899667bc414bbca82f",
+       "model_id": "c914f7dcfc7f4250b9fd6beebb40c5b3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -450,7 +450,7 @@
        "Scene(children=[PolyMesh(data=[], triangle_indices=array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, …"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,13 +472,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b33feaa7e90046e1b986b0a18a2d65e9",
+       "model_id": "68f80513f8c94910bb4521107ae357a5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -486,7 +486,7 @@
        "Scene(children=[PolyMesh(data=[], triangle_indices=array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, …"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,13 +507,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "24273f2d78e949b3891f8d499abc8b6c",
+       "model_id": "59af60f4c8d44a2294356fa521a5c6ac",
        "version_major": 2,
        "version_minor": 0
       },
@@ -521,7 +521,7 @@
        "Scene(children=[PolyMesh(data=[], triangle_indices=array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, …"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -542,13 +542,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3f0ea7f3e16a437c8c6fe08af6448574",
+       "model_id": "f5bc08961e0744948716fbfc3f68b84d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -556,7 +556,7 @@
        "Scene(children=[PolyMesh(data=[], triangle_indices=array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, …"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +646,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9bd0c36ccd924ff6ad1b0a19889438ba",
+       "model_id": "199376215aa3433695fb244eae586479",
        "version_major": 2,
        "version_minor": 0
       },
@@ -654,7 +654,7 @@
        "Scene(children=[PolyMesh(data=[], triangle_indices=array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, …"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -885,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -916,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1029,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1158,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1213,7 +1213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1230,7 +1230,7 @@
       "Error   : EXCEPTION_ACCESS_VIOLATION\n",
       "Address : 0x00007FF7F5B65355\n",
       "Module  : blender.exe\n",
-      "Thread  : 0000441c\n",
+      "Thread  : 00003ed4\n",
       "\n",
       "If the error is EXCEPTION_ACCESS_VIOLATION, the script will have worked. Check the output file.\n"
      ]
