--- a/getModelFromAddress.ipynb
+++ b/getModelFromAddress.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
        "            &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width,\n",
        "                initial-scale=1.0, maximum-scale=1.0, user-scalable=no&quot; /&gt;\n",
        "            &lt;style&gt;\n",
-       "                #map_51e1b3e57865df68204b3ffeb1478ef2 {\n",
+       "                #map_718bdc7f1af1150fbb0103a98fd45189 {\n",
        "                    position: relative;\n",
        "                    width: 100.0%;\n",
        "                    height: 100.0%;\n",
@@ -100,14 +100,14 @@
        "&lt;body&gt;\n",
        "    \n",
        "    \n",
-       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_51e1b3e57865df68204b3ffeb1478ef2&quot; &gt;&lt;/div&gt;\n",
+       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_718bdc7f1af1150fbb0103a98fd45189&quot; &gt;&lt;/div&gt;\n",
        "        \n",
        "&lt;/body&gt;\n",
        "&lt;script&gt;\n",
        "    \n",
        "    \n",
-       "            var map_51e1b3e57865df68204b3ffeb1478ef2 = L.map(\n",
-       "                &quot;map_51e1b3e57865df68204b3ffeb1478ef2&quot;,\n",
+       "            var map_718bdc7f1af1150fbb0103a98fd45189 = L.map(\n",
+       "                &quot;map_718bdc7f1af1150fbb0103a98fd45189&quot;,\n",
        "                {\n",
        "                    center: [47.63404846191406, 8.694016456604004],\n",
        "                    crs: L.CRS.EPSG3857,\n",
@@ -121,73 +121,73 @@
        "\n",
        "        \n",
        "    \n",
-       "            var tile_layer_e761879a2bbdf9769a7920cb96c0ebc7 = L.tileLayer(\n",
+       "            var tile_layer_88eaf4dd73bbbd246435f8f1ca708505 = L.tileLayer(\n",
        "                &quot;https://tile.openstreetmap.org/{z}/{x}/{y}.png&quot;,\n",
        "                {&quot;attribution&quot;: &quot;\\u0026copy; \\u003ca href=\\&quot;https://www.openstreetmap.org/copyright\\&quot;\\u003eOpenStreetMap\\u003c/a\\u003e contributors&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 19, &quot;maxZoom&quot;: 19, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
        "            );\n",
        "        \n",
        "    \n",
-       "            tile_layer_e761879a2bbdf9769a7920cb96c0ebc7.addTo(map_51e1b3e57865df68204b3ffeb1478ef2);\n",
+       "            tile_layer_88eaf4dd73bbbd246435f8f1ca708505.addTo(map_718bdc7f1af1150fbb0103a98fd45189);\n",
        "        \n",
        "    \n",
-       "            var marker_bd8e9d4b2161c4b71c413e757dcebbc5 = L.marker(\n",
+       "            var marker_6864d59156f7e7d18219d953e33f0bd1 = L.marker(\n",
        "                [47.63404846191406, 8.694016456604004],\n",
        "                {}\n",
-       "            ).addTo(map_51e1b3e57865df68204b3ffeb1478ef2);\n",
+       "            ).addTo(map_718bdc7f1af1150fbb0103a98fd45189);\n",
        "        \n",
        "    \n",
-       "        var popup_af3be830fdb34bf0724a650f02e20594 = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
+       "        var popup_31ae8bb5c948954c2be15d8227ce46e3 = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
        "\n",
        "        \n",
        "            \n",
-       "                var html_354f0f234507502c5a66155e8b7cfb90 = $(`&lt;div id=&quot;html_354f0f234507502c5a66155e8b7cfb90&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Index: 0&lt;/div&gt;`)[0];\n",
-       "                popup_af3be830fdb34bf0724a650f02e20594.setContent(html_354f0f234507502c5a66155e8b7cfb90);\n",
+       "                var html_ae6a4f5696e63386c015f814fc71109f = $(`&lt;div id=&quot;html_ae6a4f5696e63386c015f814fc71109f&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Index: 0&lt;/div&gt;`)[0];\n",
+       "                popup_31ae8bb5c948954c2be15d8227ce46e3.setContent(html_ae6a4f5696e63386c015f814fc71109f);\n",
        "            \n",
        "        \n",
        "\n",
-       "        marker_bd8e9d4b2161c4b71c413e757dcebbc5.bindPopup(popup_af3be830fdb34bf0724a650f02e20594)\n",
+       "        marker_6864d59156f7e7d18219d953e33f0bd1.bindPopup(popup_31ae8bb5c948954c2be15d8227ce46e3)\n",
        "        ;\n",
        "\n",
        "        \n",
        "    \n",
        "    \n",
-       "            var marker_24b485c83ba03e1c1d7f589589231723 = L.marker(\n",
+       "            var marker_ba7b5d35e5d131f68c49de06e272b04b = L.marker(\n",
        "                [47.634090423583984, 8.694190979003906],\n",
        "                {}\n",
-       "            ).addTo(map_51e1b3e57865df68204b3ffeb1478ef2);\n",
+       "            ).addTo(map_718bdc7f1af1150fbb0103a98fd45189);\n",
        "        \n",
        "    \n",
-       "        var popup_87abb5d3d7c09eb4c5c51756aef6248d = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
+       "        var popup_81cb4ca855c3390d0356a3210ffe5dc6 = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
        "\n",
        "        \n",
        "            \n",
-       "                var html_4a851f8922ceb8a98d17af04e56a1d60 = $(`&lt;div id=&quot;html_4a851f8922ceb8a98d17af04e56a1d60&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Index: 1&lt;/div&gt;`)[0];\n",
-       "                popup_87abb5d3d7c09eb4c5c51756aef6248d.setContent(html_4a851f8922ceb8a98d17af04e56a1d60);\n",
+       "                var html_1b13ba2cc35d7c991d105b18262abf30 = $(`&lt;div id=&quot;html_1b13ba2cc35d7c991d105b18262abf30&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Index: 1&lt;/div&gt;`)[0];\n",
+       "                popup_81cb4ca855c3390d0356a3210ffe5dc6.setContent(html_1b13ba2cc35d7c991d105b18262abf30);\n",
        "            \n",
        "        \n",
        "\n",
-       "        marker_24b485c83ba03e1c1d7f589589231723.bindPopup(popup_87abb5d3d7c09eb4c5c51756aef6248d)\n",
+       "        marker_ba7b5d35e5d131f68c49de06e272b04b.bindPopup(popup_81cb4ca855c3390d0356a3210ffe5dc6)\n",
        "        ;\n",
        "\n",
        "        \n",
        "    \n",
        "    \n",
-       "            var marker_a2ac9c96a4304cc985fc9e12ae26fb74 = L.marker(\n",
+       "            var marker_7f9a32b29cc879c308edbb5e34cfe694 = L.marker(\n",
        "                [47.63389205932617, 8.694341659545898],\n",
        "                {}\n",
-       "            ).addTo(map_51e1b3e57865df68204b3ffeb1478ef2);\n",
+       "            ).addTo(map_718bdc7f1af1150fbb0103a98fd45189);\n",
        "        \n",
        "    \n",
-       "        var popup_568f21cf3843b9bff7d4758479632cb0 = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
+       "        var popup_851edaf3dd9e8c4637304482b7718ea0 = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
        "\n",
        "        \n",
        "            \n",
-       "                var html_e6615898167549ed6ebc074e2a9d6b1e = $(`&lt;div id=&quot;html_e6615898167549ed6ebc074e2a9d6b1e&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Index: 2&lt;/div&gt;`)[0];\n",
-       "                popup_568f21cf3843b9bff7d4758479632cb0.setContent(html_e6615898167549ed6ebc074e2a9d6b1e);\n",
+       "                var html_4e1dd1128e2aedde43c1d7e5fb88c6f4 = $(`&lt;div id=&quot;html_4e1dd1128e2aedde43c1d7e5fb88c6f4&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Index: 2&lt;/div&gt;`)[0];\n",
+       "                popup_851edaf3dd9e8c4637304482b7718ea0.setContent(html_4e1dd1128e2aedde43c1d7e5fb88c6f4);\n",
        "            \n",
        "        \n",
        "\n",
-       "        marker_a2ac9c96a4304cc985fc9e12ae26fb74.bindPopup(popup_568f21cf3843b9bff7d4758479632cb0)\n",
+       "        marker_7f9a32b29cc879c308edbb5e34cfe694.bindPopup(popup_851edaf3dd9e8c4637304482b7718ea0)\n",
        "        ;\n",
        "\n",
        "        \n",
@@ -196,10 +196,10 @@
        "&lt;/html&gt;\" style=\"position:absolute;width:100%;height:100%;left:0;top:0;border:none !important;\" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe></div></div>"
       ],
       "text/plain": [
-       "<folium.folium.Map at 0x2caadf0bd90>"
+       "<folium.folium.Map at 0x159b740fa70>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,13 +436,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c914f7dcfc7f4250b9fd6beebb40c5b3",
+       "model_id": "2875f987cd4c4b4abbe0230b90efb911",
        "version_major": 2,
        "version_minor": 0
       },
@@ -450,7 +450,7 @@
        "Scene(children=[PolyMesh(data=[], triangle_indices=array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, …"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,13 +472,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "68f80513f8c94910bb4521107ae357a5",
+       "model_id": "693cf9e5ea7f49a0bd5d3c8dbb6cd9cd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -486,7 +486,7 @@
        "Scene(children=[PolyMesh(data=[], triangle_indices=array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, …"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,13 +507,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "59af60f4c8d44a2294356fa521a5c6ac",
+       "model_id": "19498fa2574a4a64938848e7636445a3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -521,7 +521,7 @@
        "Scene(children=[PolyMesh(data=[], triangle_indices=array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, …"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -542,13 +542,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f5bc08961e0744948716fbfc3f68b84d",
+       "model_id": "9a2f6fe9f6254ce28e77b278aaf3c2de",
        "version_major": 2,
        "version_minor": 0
       },
@@ -556,7 +556,7 @@
        "Scene(children=[PolyMesh(data=[], triangle_indices=array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, …"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +646,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "199376215aa3433695fb244eae586479",
+       "model_id": "bf04f5fcf4244a3fbbf1d086d6984050",
        "version_major": 2,
        "version_minor": 0
       },
@@ -654,7 +654,7 @@
        "Scene(children=[PolyMesh(data=[], triangle_indices=array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, …"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -885,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -916,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1029,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1158,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1213,7 +1213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1222,15 +1222,15 @@
      "text": [
       "Removed existing Blender file\n",
       "Blender execution failed with the following output:\n",
-      "Read prefs: \"C:\\Users\\chu\\AppData\\Roaming\\Blender Foundation\\Blender\\4.0\\config\\userpref.blend\"\n",
-      "Read blend: \"c:\\Users\\chu\\Documents\\Studium\\Bachelorarbeit\\swissBUILDINGS3D\\1052-11\\models\\model_2045_with_uv_map.blend\"\n",
+      "Read prefs: \"C:\\Users\\carlo\\AppData\\Roaming\\Blender Foundation\\Blender\\4.1\\config\\userpref.blend\"\n",
+      "Read blend: \"h:\\Studium Lokal\\Bachelorarbeit\\swissBUILDINGS3D\\1052-11\\models\\model_2045_with_uv_map.blend\"\n",
       "Info: Saved \"model_2045_texturated.blend\"\n",
-      "Writing: C:\\Users\\chu\\AppData\\Local\\Temp\\model_2045_texturated.crash.txt\n",
+      "Writing: C:\\Users\\carlo\\AppData\\Local\\Temp\\model_2045_texturated.crash.txt\n",
       "\n",
       "Error   : EXCEPTION_ACCESS_VIOLATION\n",
-      "Address : 0x00007FF7F5B65355\n",
+      "Address : 0x00007FF78AA9EAE5\n",
       "Module  : blender.exe\n",
-      "Thread  : 00003ed4\n",
+      "Thread  : 00005f14\n",
       "\n",
       "If the error is EXCEPTION_ACCESS_VIOLATION, the script will have worked. Check the output file.\n"
      ]
@@ -1277,7 +1277,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
